# track_demo

./: README.md  csrt.py  main.py  main_hsv.py  main_yolo.py  pyproject.toml  tracker.py
script/: face_pose.py  face_pose6D.py  yolo2D.py  yolo3D.py
src/: Kalmanfilter.py  __init__.py  detector.py  predictor.py  target.py  tracker.py
src/Kalmanfilter/: Kalmanfilter3D.py  Kalmanfilter6D.py  __init__.py
src/detector/: __init__.py  detector2d.py  detector3d.py  face_pose.py
