[project]
name = "track-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.8.0,<4.9.0",
    "numpy<2",
    "ultralytics>=8.4.55",
    "mediapipe>=0.10.0",
    "numba>=0.57.0",
]

[tool.setuptools.packages.find]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"